--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: elixir
 elixir:
   - 1.9.0
   - 1.8.2
-  - 1.5.1
 otp_release:
   - 22.0
   - 21.0
   - 20.0
+
+matrix:
+  include:
+    - elixir: 1.5.2
+      otp_release: 20.0
